--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="Images/scott-modified.png" alt="scott profile photo"></td>
+      <td><img src="scott-modified.png" alt="scott profile photo"></td>
       <td><h1>Scott Smith</h1>
       <p>Meticulous person, who excels at juggling multiple tasks and working under pressure, I also have a broad range of indutry experience</p>
       <p>I'm studing at The Open University doing <em>Computing & IT (software)</em> and I currently work as a multi-site manager for Costa Coffee</p></td>
